tests/errors/destructure_bad_len.solar
fn main() {
  let arr: [Int] = [1, 2, 3];
  let [a, b]: [Int] = arr;
}
